--- a/style.css
+++ b/style.css
@@ -81,17 +81,16 @@ img {
   *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    
+    box-sizing: border-box;  
   } 
   div{
     font-size: 12px;
   } 
   .container,
   #why {
-      background-color: rgb(239, 240, 194);
-      padding: 10px 0;
-    }
+    background-color: rgb(239, 240, 194);
+    padding: 10px 0;
+  }
 
   .row {
     max-width: 96%;
@@ -116,5 +115,57 @@ img {
 
   img {
     height: 90px;
+  }
+}
+
+
+@media screen and (min-width: 420px) and (max-width: 768px){
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; 
+  } 
+  
+  div{
+    font-size: 14px;
+  } 
+  .container,
+  #why {
+    background-color: rgb(164, 212, 231);
+    padding: 10px 0;
+  }
+
+  .container.grey{
+    background-color: rgb(226, 228, 128);
+  }
+  .row {
+    max-width: 96%;
+    margin: 0 auto;
+  }
+
+  #lezioni .row>.left,
+  #lezioni .row>.right {
+    width: 50%;
+    float: left;
+    padding: 0 5px;
+}
+
+  #steps .row>.left,
+  #steps .row>.central,
+  #steps .row>.right,
+  #why .row>.first,
+  #why .row>.second,
+  #why .row>.third{
+    width: 100%;
+    display: block;
+    margin: 10px 0;
+  }  
+
+  #why .row img {
+    padding: 30px
+  }
+
+  img {
+    height: 120px;
   }
 }
